cmake_minimum_required(VERSION 3.12)
project(brexx C)

set(CMAKE_C_STANDARD 90)
SET(CMAKE_C_FLAGS -D__CROSS__)
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D__DEBUG__")

include_directories(inc)
include_directories(mvs)

add_executable(brexx
        inc/bintree.h
        inc/bmem.h
        inc/bstr.h
        inc/cefunc.h
        inc/compile.h
        inc/config.h
        inc/dbginfo.h
        inc/dqueue.h
        inc/interpre.h
        inc/ldefs.h
        inc/lerror.h
        inc/lmvs.h
        inc/lstring.h
        inc/nextsymb.h
        inc/os.h
        inc/rexx.h
        inc/rxdefs.h
        inc/rxmvs.h
        inc/rxmvsext.h
        inc/stack.h
        inc/trace.h
        inc/variable.h
        lstring/abbrev.c
        lstring/abs.c
        lstring/add.c
        lstring/atan2.c
        lstring/b2x.c
        lstring/bitand.c
        lstring/bitor.c
        lstring/bitxor.c
        lstring/bool.c
        lstring/c2d.c
        lstring/c2x.c
        lstring/center.c
        lstring/changest.c
        lstring/charin.c
        lstring/charout.c
        lstring/chars.c
        lstring/compare.c
        lstring/copies.c
        lstring/countstr.c
        lstring/d2c.c
        lstring/d2x.c
        lstring/datatype.c
        lstring/date.c
        lstring/dec.c
        lstring/delstr.c
        lstring/delword.c
        lstring/div.c
        lstring/equal.c
        lstring/errortxt.c
        lstring/expose.c
        lstring/format.c
        lstring/hashvalu.c
        lstring/inc.c
        lstring/index.c
        lstring/insert.c
        lstring/intdiv.c
        lstring/justify.c
        lstring/lastpos.c
        lstring/linein.c
        lstring/lineout.c
        lstring/lines.c
        lstring/lmath.c
        lstring/lower.c
        lstring/lstring.c
        lstring/mod.c
        lstring/mult.c
        lstring/neg.c
        lstring/overlay.c
        lstring/pow.c
        lstring/print.c
        lstring/read.c
        lstring/reradix.c
        lstring/reverse.c
        lstring/right.c
        lstring/sign.c
        lstring/soundex.c
        lstring/space.c
        lstring/stderr.c
        lstring/strip.c
        lstring/sub.c
        lstring/substr.c
        lstring/subword.c
        lstring/time.c
        lstring/translat.c
        lstring/trunc.c
        lstring/upper.c
        lstring/verify.c
        lstring/word.c
        lstring/wordidx.c
        lstring/wordlen.c
        lstring/wordpos.c
        lstring/words.c
        lstring/write.c
        lstring/x2b.c
        lstring/x2c.c
        lstring/x2d.c
        lstring/xrange.c
        src/address.c
        src/bintree.c
        src/bmem.c
        src/builtin.c
        src/compile.c
        src/dqueue.c
        src/error.c
        src/expr.c
        src/interpre.c
        src/main.c
        src/nextsymb.c
        src/rexx.c
        src/rexxfunc.c
        src/rxconv.c
        src/rxfiles.c
        src/rxmath.c
        src/rxmvs.c
        src/rxstr.c
        src/rxword.c
        src/stack.c
        src/template.c
        src/trace.c
        src/variable.c)
